# madmax-artiq-zynq

./: README.md  dataset_db.mdb-lock  default.nix  demo.json  device_db.py  entagnler_test.json  entangler_device_db_maker.py  flake.nix  kasli-soc-master.json  kasli-soc-satellite.json  remote_run.sh  shell.nix
examples/: acpki_ddb_extra.py  device_db.py
examples/acpki/: device_db.py
examples/ebaz4205/: device_db.py
patches/: migen-axi-pr-34.patch
src/: .clang-format  .clippy.toml  .pre-commit-config.yaml  Makefile  armv7-none-eabihf.json  rustfmt.toml
src/.cargo/: config
src/gateware/: acpki.py  config.py  cxp_4r_fmc.py  ebaz4205.py  kasli_soc.py  kasli_soc_entangler.py  zc706.py
src/libboard_artiq/: Cargo.toml.tpl
src/libboard_artiq/src/: cxp_camera_setup.rs  cxp_ctrl.rs  cxp_grabber.rs  cxp_led.rs  cxp_packet.rs  cxp_phys.rs  drtio_eem.rs  drtio_routing.rs  drtioaux.rs  drtioaux_async.rs  drtioaux_proto.rs  fiq.rs  io_expander.rs  lib.rs  logger.rs  si5324.rs  si549.rs
src/libbuild_zynq/: Cargo.toml
src/libdwarf/: Cargo.toml
src/libdwarf/src/: eh.rs
src/libdyld/: Cargo.toml.tpl
src/libdyld/src/: file.rs  image.rs  reloc.rs
src/libio/: Cargo.toml.tpl  cursor.rs  lib.rs  proto.rs
src/libksupport/: Cargo.toml.tpl
src/libksupport/src/: cxp.rs  eh_artiq.rs  i2c.rs  irq.rs  lib.rs  rpc.rs
src/libunwind/: Cargo.toml  lib.rs  libunwind.rs
src/runtime/: Cargo.toml.tpl
src/runtime/src/: analyzer.rs  comms.rs  eh_artiq.rs  main.rs  mgmt.rs  moninj.rs  panic.rs  rpc.rs  rpc_async.rs  rtio_acp.rs  rtio_clocking.rs  (+4 more)
src/satman/: Cargo.toml.tpl
(+26 files in other folders)
